policies/components/security-context/disallow-run-as-root-user/disallow-run-as-root-user.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mas-disallow-run-as-root-user
  annotations:
    policies.kyverno.io/title: Disallow Run as root uUser
    policies.kyverno.io/category: IBM - Security Context
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    kyverno.io/kyverno-version: 1.6.0
    kyverno.io/kubernetes-version: "1.22-1.23"
    policies.kyverno.io/description: >-
      Containers must be required to run as non-root users. This policy ensures
      `runAsUser` is either unset or set to a number greater than zero.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: run-as-non-root-user
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - "mas-*-core"
                - "mas-*-assist"
                - "mas-*-facilities"
                - "mas-*-iot"
                - "mas-*-manage"
                - "mas-*-monitor"
                - "mas-*-optimizer"
                - "mas-*-predict"
                - "mas-*-visualinspection"
                - "sls-*"
                - "ibm-sls"
                - "ibm-dro"
                - "redhat-marketplace"
                - "db2u"
      validate:
        message: >-
          Running as root is not allowed. The fields spec.securityContext.runAsUser,
          spec.containers[*].securityContext.runAsUser, spec.initContainers[*].securityContext.runAsUser,
          and spec.ephemeralContainers[*].securityContext.runAsUser must be unset or
          set to a number greater than zero.
        pattern:
          spec:
            =(securityContext):
              =(runAsUser): ">0"
            =(ephemeralContainers):
              - =(securityContext):
                  =(runAsUser): ">0"
            =(initContainers):
              - =(securityContext):
                  =(runAsUser): ">0"
            containers:
              - =(securityContext):
                  =(runAsUser): ">0"
