policies/components/security-context/disallow-run-as-root-user/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-run-as-root-user
policies:
  - disallow-run-as-root-user.yaml
resources:
  - resources.yaml
variables: ../../values.yaml
results:
  - kind: Pod
    policy: ibm-disallow-run-as-root-user
    resources:
      - badpod01
      - badpod02
      - badpod03
      - badpod04
      - badpod05
      - badpod06
    result: fail
    rule: run-as-non-root-user
  - kind: Pod
    policy: ibm-disallow-run-as-root-user
    resources:
      - goodpod01
      - goodpod02
      - goodpod03
      - goodpod04
      - goodpod05
      - goodpod06
      - goodpod07
      - goodpod08
      - goodpod09
      - goodpod10
    result: pass
    rule: run-as-non-root-user
